README and envs.env